--- a/go-admin/.gitignore
+++ b/go-admin/.gitignore
@@ -10,6 +10,7 @@ temp/
 !temp
 vendor
 config/settings.dev.yml
+config/settings.prod.yml
 config/settings.dev.*.yml
 config/settings.dev.*.yml.log
 temp/logs
