--- a/go-admin-ui/.env.production
+++ b/go-admin-ui/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-# VUE_APP_BASE_API = 'http://101.35.245.54:8100'
-VUE_APP_BASE_API = 'http://localhost:8100'
+VUE_APP_BASE_API = 'http://101.35.245.54:8100'
+# VUE_APP_BASE_API = 'http://localhost:8100'
 
